[package]
name = "one-billion-row-challenge"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
fxhash = "0.2.1"
humansize = "2.1.3"
indicatif = "0.17.8"
itertools = "0.13.0"
memmap2 = "0.9.4"
rand = "0.8.5"
rayon = "1.10.0"
