[package]
name = "one-billion-row-challenge"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
panic = "abort"
debug = true

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
fxhash = "0.2.1"
humansize = "2.1.3"
indicatif = "0.17.8"
itertools = "0.13.0"
memchr = "2.7.4"
rand = "0.8.5"
rand_distr = "0.4"
